@@ -2,13 +2,18 @@
 
 #define COMMON_INT_DEF(x) \
   asm (".tls_common " #x ",4,4")
+/* XXX Until we get compiler support we don't need declarations.  */
+#define COMMON_INT_DECL(x)
 
 /* XXX This definition will probably be machine specific, too.  */
 #define VAR_INT_DEF(x) \
   asm (".section .tdata\n\t"						      \
        ".globl " #x "\n"						      \
        #x ":\t.long 0\n\t"						      \
+       ".size " #x ",4\n\t"						      \
        ".previous")
+/* XXX Until we get compiler support we don't need declarations.  */
+#define VAR_INT_DECL(x)
 
 
   /* XXX Each architecture must have its own asm for now.  */
@@ -20,7 +25,15 @@
 	  : "=r" (__l));						      \
      __l; })
 
-#define TLS_IE(x) \
+# ifdef PIC
+#  define TLS_IE(x) \
+  ({ int *__l;								      \
+     asm ("movl %%gs:0,%0\n\t"						      \
+	  "subl " #x "@gottpoff(%%ebx),%0"				      \
+	  : "=r" (__l));						      \
+     __l; })
+# else
+#  define TLS_IE(x) \
   ({ int *__l, __b;							      \
      asm ("call 1f\n\t"							      \
 	  ".subsection 1\n"						      \
@@ -32,8 +45,18 @@
 	  "subl " #x "@gottpoff(%%ebx),%0"				      \
 	  : "=r" (__l), "=&b" (__b));					      \
      __l; })
+# endif
 
-#define TLS_LD(x) \
+# ifdef PIC
+#  define TLS_LD(x) \
+  ({ int *__l;								      \
+     asm ("leal " #x "@tlsldm(%%ebx),%%eax\n\t"				      \
+	  "call ___tls_get_addr@plt\n\t"				      \
+	  "leal " #x "@dtpoff(%%eax), %%eax"				      \
+	  : "=a" (__l));						      \
+     __l; })
+# else
+#  define TLS_LD(x) \
   ({ int *__l, __b;							      \
      asm ("call 1f\n\t"							      \
 	  ".subsection 1\n"						      \
@@ -46,8 +69,18 @@
 	  "leal " #x "@dtpoff(%%eax), %%eax"				      \
 	  : "=a" (__l), "=&b" (__b));					      \
      __l; })
+# endif
 
-#define TLS_GD(x) \
+# ifdef PIC
+#  define TLS_GD(x) \
+  ({ int *__l;								      \
+     asm ("leal " #x "@tlsgd(%%ebx),%%eax\n\t"				      \
+	  "call ___tls_get_addr@plt\n\t"				      \
+	  "nop"								      \
+	  : "=a" (__l));						      \
+     __l; })
+# else
+#  define TLS_GD(x) \
   ({ int *__l, __b;							      \
      asm ("call 1f\n\t"							      \
 	  ".subsection 1\n"						      \
@@ -60,6 +93,7 @@
 	  "nop"								      \
 	  : "=a" (__l), "=&b" (__b));					      \
      __l; })
+# endif
 
 #else
 # error "No support for this architecture so far."
